--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -160,6 +160,10 @@
 		<Translation>Salz Produktion</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROJECT_MANUAL_OF_RHETORIC</zType>
+		<Translation>Handbuch der Redekunst</Translation>
+	</Entry>
+	<Entry>
     <zType>TEXT_PROJECT_AUTONOMOUS_RULE</zType>
     <Translation>Autonome Herrschaft</Translation>
   </Entry>  
